Fix bullet styling, where (hidden) bullets overlap preceding text

--- a/ArticleTemplates/css/scss/partials/_bullet.scss
+++ b/ArticleTemplates/css/scss/partials/_bullet.scss
@@ -3,6 +3,7 @@
 	margin-right: -0.25em;
 	width: 1.111em;
 	display: inline-block;
+	overflow: hidden;
 }
 
 .bullet,
