--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -1840,7 +1840,8 @@ aside {
   color: transparent;
   margin-right: -0.25em;
   width: 1.111em;
-  display: inline-block; }
+  display: inline-block;
+  overflow: hidden; }
 
 .bullet,
 .article__header ul > li,
